2016-05-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c src/graphics.h src/plot2d.c:  Improved handling of
	boxplot data with multiple "factors" (i.e. category labels). The data
	is now sorted only once, rather than once per factor.  This change
	was documented as appearing in 5.0.1, but appently was never applied.
	Bug #1769

2016-05-07 Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/term.h: Move estimate.trm further up, so emf.trm can see it.

2016-05-06  Ethan A Merritt  <merritt@u.washington.edu>

	* term/emf.trm: Better (though still not perfect) estimation of
	the space occupied by a UTF-8 string. Till now each byte in a
	multi-byte character was being counted as occupying space.  Bug
	#1787

	* src/term.h: The above change means that estimate.trm must be
	included earlier in term.h than emf.trm.  Bump it to the top.

2016-05-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/save.c:  "rotate parallel" was not being saved correctly.

2016-05-01  Matthew Halverson  <mhalver@users.sf.net>

	* term/svg.trm: Do not flag svg terminal as TERM_BINARY.

2016-04-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/fit.c (call_gnuplot):  More robust handling of undefined value
	returned by function being fit.

2016-04-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (process_image):  There are two paths through the
	code that extracts image data from an ascii input stream, depending
	on whether the x or y coordinate varies fastest.  The fix for Bug #1767
	corrected one path but broke the other.  I.e. none of version 5.0
	patchlevels 0-3 worked correctly on all image input.  Now we fix the
	broken path so that all cases are working, at least on test data.
	Bug #1782

2016-04-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (get_arrow3d):  Fix typo introduced in 5.0 that caused
	arrows defined by "from ... rto ..." to be mangled in 3D plots.
